[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
license = {workspace = true}
license-file = {workspace = true}

[build-dependencies]
utoipa = { workspace = true }

[dependencies]
anyhow = "1.0.89"
arrow = { version = "54.1.0" }
async-trait = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
base64 = { version = "0.22.1" }
catalog = { path = "../catalog" }
chrono = { workspace = true }
control_plane = { path = "../control_plane" }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
flate2 = { version = "1.0.34" }
http = "1.2.0"
http-body-util = "0.1.0"
hyper = "1.5.0"
iceberg = { workspace = true }
indexmap = { version = "2.7.1" }
lazy_static = { version = "1.4.0" }
object_store = { workspace = true }
regex = { version = "1.11.0" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
slatedb = { workspace = true, version = "0.3.0" }
snafu = { workspace = true }
swagger = { version = "6.1", features = [
  "serdejson",
  "server",
  "client",
  "tls",
  "tcp",
] }
time = "0.3.37"
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = [
  "catch-panic",
  "timeout",
  "sensitive-headers",
  "cors",
  "trace",
] }
tower-sessions = { version = "0.14.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utils = { path = "../utils" }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = { workspace = true }
lazy_static = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
