[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
license = {workspace = true}
license-file = {workspace = true}

[dependencies]

arrow = { version = "54.1.0" }
arrow-json = { version = "54.1.0" }
arrow-schema = { version = "54.1.0", default-features = false }
async-trait = { workspace = true }

chrono = { workspace = true }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-macros = { workspace = true }
datafusion_iceberg = { workspace = true }

futures = { workspace = true }
iceberg-rest-catalog = { workspace = true }
iceberg-rust = { workspace = true }
object_store = { workspace = true }

paste = "1"
regex = { version = "1.11.0" }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }

sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "53c291e3e95f176daea954f614409e5f674ec561", features = [
  "visitor",
] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { version = "2.5.4" }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
