[package]
name = "embucket_runtime"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]

arrow = { version = "55.0.0",features = [
  "prettyprint",
  "chrono-tz",
]  }
arrow-array = { version = "55.0.0" }
arrow-json = { version = "55.0.0" }
arrow-schema = { version = "55.0.0", default-features = false }
async-trait = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
base64 = { version = "0.22.1" }
bytes = { workspace = true }

chrono = { workspace = true }
dashmap = "6.1.0"

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-macros = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion_iceberg = { workspace = true }
flate2 = { version = "1.0.34" }

futures = { workspace = true }
geo-traits = { version = "0.2.0" }
geo-types = { version = "0.7.15" }

aws-config = { version = "1.5.17" }
aws-credential-types = { version = "1.2.1",  features = ["hardcoded-credentials"]}
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-array = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow-array", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-cast = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow-cast", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-geoparquet = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow-geoparquet", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow-schema", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-test = { git = "https://github.com/geoarrow/geoarrow-rs.git" , package = "geoarrow-test", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geodatafusion = { git = "https://github.com/geoarrow/geoarrow-rs.git", package = "geodatafusion", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geohash = { version = "0.13.1" }
geozero = { version = "0.14.0" }
http = "1.2.0"
http-body-util = "0.1.0"
hyper = "1.5.0"
iceberg-rest-catalog = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
iceberg-s3tables-catalog = { workspace = true }
embucket_history = { workspace = true }
embucket_metastore = { version = "0.1.0", path = "../metastore" }
embucket_utils = { version = "0.1.0", path = "../utils" }
indexmap = { version = "2.7.1" }
itertools = "0.14.0"
mime_guess = "2.0.5"
object_store = { workspace = true }


paste = "1"
regex = { version = "1.11.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }

sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "ed416548dcfe4a73a3240bbf625fb9010a4925c8", features = [
  "visitor",
] }
strum = { version = "0.27.1", features = ["derive"] }

swagger = { version = "6.1", features = [
  "serdejson",
  "server",
  "client",
  "tls",
  "tcp",
] }
tar = { workspace = true }
time = "0.3.37"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tower = { workspace = true }

tower-http = { version = "0.6.1", features = [
  "catch-panic",
  "timeout",
  "sensitive-headers",
  "cors",
  "trace",
] }
tower-sessions = { version = "0.14.0" }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
url = { version = "2.5.4" }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml", "filters"] }
reqwest = "0.12.14"

