[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = {workspace = true}
license-file = {workspace = true}

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
iceberg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
