[package]
name = "icebucket_utils"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
iceberg = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = "1.42.1"
tokio = { workspace = true }
